tests/integration/errors/const-assign.it
Assign const

- compilation error
=========
void main() {
    const float a = 5.0;
    float b = 2.0;

    a = b;
}
=========
<stdin>:5: error: assignement of constant variable 'a'
